fix(post): preserve white space on post and comments

--- a/app/assets/stylesheets/comments/_comment.css
+++ b/app/assets/stylesheets/comments/_comment.css
@@ -22,4 +22,5 @@
   grid-area: message;
   margin: 0;
   padding: 0.5rem;
+  white-space: pre-wrap;
 }
