--- a/app/assets/stylesheets/posts/_post.css
+++ b/app/assets/stylesheets/posts/_post.css
@@ -18,6 +18,7 @@
 .posts__post__message {
   margin: 0;
   padding: 0.5rem;
+  white-space: pre-wrap;
 }
 
 .posts__post__footer {
